--- a/css/signin.css
+++ b/css/signin.css
@@ -1,13 +1,17 @@
 body {
   padding-top: 40px;
   padding-bottom: 40px;
-  background-color: #eee;
+  background-color:white;
 }
-
+#logo {
+  text-align: center;
+}
 .form-signin {
   max-width: 330px;
   padding: 15px;
-  margin: 0 auto;
+  margin: 9px auto;
+  background: #EEE;
+  border-radius: 9px;
 }
 .form-signin .form-signin-heading,
 .form-signin .checkbox {
