--- a/css/template.css
+++ b/css/template.css
@@ -4,6 +4,15 @@ html {
 body {
   padding-top: 50px;
 }
+#logo {
+  text-align: center;
+}
+h1 {
+  margin-top: 0;
+}
+#welcome {
+  margin-top: 0;
+}
 .navbar-inverse .navbar-brand {
   color: white;
 }
@@ -99,4 +108,11 @@ body {
     margin-right: 10px;
     font-size: .9rem;
     margin-top: 3px;
-  }
+}
+p.copyright {
+    text-align: center;
+    font-size: .9rem;
+}
+a:hover {
+  cursor: pointer;
+}
